--- a/public/videoplayer.html
+++ b/public/videoplayer.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <a id="button" href="index.html">Back</a>
-    <iframe src="https://piped.video/trending"></iframe>
+    <iframe src="https://vercel.com/evans-projects-edff1a37/gamefilx/7u3SjfkkHcf1wdZNTc9eZChpuqiA"></iframe>
 </body>
 <script src="termsofservice.js"></script>
 </html>
