--- a/public/videoplayer.html
+++ b/public/videoplayer.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <a id="button" href="index.html">Back</a>
-    <iframe src="https://gamefilx-git-main-evans-projects-edff1a37.vercel.app/"></iframe>
+    <iframe src="https://gamefilx.vercel.app/"></iframe>
 </body>
 <script src="termsofservice.js"></script>
 </html>
