--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,9 @@
         <div class="column">
             <h3>New</h3>
             <ul>
-                <p>12/13/2024</p>\
+                <p>12/17/2024</p>
+                <p>OKAY THE VIDEOWEB IS HERE!!! It does not work on some computers by the way</p>
+                <p>12/13/2024</p>
                 <p>I just added a video player basically like youtube but i think it will just be better</p>
                 <hr>
                 <h2>ITS FINALLY RELEASED</h2>
